--- a/src/styles/global/App.scss
+++ b/src/styles/global/App.scss
@@ -4,7 +4,8 @@ body {
   font-family: $font-family-base;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  background: $light-green;
+  background: rgb(130,209,115);
+  background: linear-gradient(180deg, rgba(130,209,115,1) 57%, rgba(102,187,85,1) 100%);  
   color: $dark-green;
 }
 
@@ -37,7 +38,7 @@ a {
 
 .home-wrap {
   display: flex;
-  min-height: 80vh;
+  min-height: 100vh;
   align-items: center;
 }
 
