--- a/src/styles/global/App.scss
+++ b/src/styles/global/App.scss
@@ -17,6 +17,10 @@ a {
   }
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-weight: $font-weight-bold;
+}
+
 .btn-primary {
   background: $medium-purple;
   border-color: $medium-purple;
