--- a/src/components/StrainListItem/StrainListItem.scss
+++ b/src/components/StrainListItem/StrainListItem.scss
@@ -1,6 +1,6 @@
 @import '../../styles/global/variables.scss';
 
-.strain-list-item {
+.strain-list__item {
   border-bottom: 1px solid $gray-300;
   span {
     font-weight: $font-weight-normal;
