--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -31,7 +31,7 @@ $primary: $light-green;
 // $dark:  $gray-800 !default;
 
 // links
-$link-color:  $dark-green;
+$link-color:  $dark-purple;
 $link-hover-color:  lighten($link-color, 15%);
 $link-hover-decoration: none;
 
@@ -40,7 +40,7 @@ $link-hover-decoration: none;
 $font-family-sans-serif:  "Quicksand", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 $font-family-base:  $font-family-sans-serif;
 
-$font-size-base:  1rem !default; // Assumes the browser default, typically `16px`
+$font-size-base:  1rem; // Assumes the browser default, typically `16px`
 $font-size-lg:  ($font-size-base * 1.25);
 $font-size-sm:  ($font-size-base * .875);
 
@@ -49,3 +49,20 @@ $font-size-sm:  ($font-size-base * .875);
 $font-weight-normal:  500;
 $font-weight-bold:  700;
 $font-weight-bolder:  bolder;
+
+// Spacing
+
+$spacer: 1rem;
+$spacers: () !default;
+// stylelint-disable-next-line scss/dollar-variable-default
+$spacers: map-merge(
+  (
+    0: 0,
+    1: ($spacer * .25),
+    2: ($spacer * .5),
+    3: $spacer,
+    4: ($spacer * 1.5),
+    5: ($spacer * 3)
+  ),
+  $spacers
+);
