--- a/src/components/StrainListItem/StrainListItem.scss
+++ b/src/components/StrainListItem/StrainListItem.scss
@@ -1,5 +1,14 @@
 @import '../../styles/global/variables.scss';
 
+.strain-link--active {
+  .strain-list__item {
+    background: $dark-purple;
+    h3, span {
+      color: $white;
+    }
+  }
+}
+
 .strain-list__item {
   border-bottom: 1px solid $gray-300;
   span {
