Added filter buttons to strain profile view. Got active links to highlight properly.

--- a/src/components/StrainListItem/StrainListItem.scss
+++ b/src/components/StrainListItem/StrainListItem.scss
@@ -1,6 +1,6 @@
 @import '../../styles/global/variables.scss';
 
-.strain-link--active {
+.active {
   .strain-list__item {
     background: $dark-purple;
     h3, span {
