--- a/src/styles/global/App.scss
+++ b/src/styles/global/App.scss
@@ -54,3 +54,8 @@ h1, h2, h3, h4, h5, h6 {
 .capitalize {
   text-transform: capitalize;
 }
+
+.strain-list {
+  list-style: none;
+  padding-left: 0;
+}
