--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -66,3 +66,9 @@ $spacers: map-merge(
   ),
   $spacers
 );
+
+$global-border-radius: 3px;
+
+$colour-sativa: orange;
+$colour-indica: purple;
+$colour-hybrid: blue;
