--- a/src/components/HomePanel/HomePanel.scss
+++ b/src/components/HomePanel/HomePanel.scss
@@ -8,7 +8,7 @@
 
 .panel-home {
   background: $white;
-  border-radius: 2px;
+  border-radius: $global-border-radius;
   display: flex;
   min-height: 400px;
   -webkit-box-shadow: 0px 60px 96px -20px rgba(0,0,0,0.30);
