Added strain iconography to strainlist.

--- a/src/components/StrainListItem/StrainListItem.scss
+++ b/src/components/StrainListItem/StrainListItem.scss
@@ -14,6 +14,7 @@
   span {
     font-weight: $font-weight-normal;
     font-size: $font-size-base * 0.9;
+    color: $gray-600;
   }
   .strain-race {
     text-transform: capitalize;
