--- a/src/components/StrainsView/StrainsView.scss
+++ b/src/components/StrainsView/StrainsView.scss
@@ -4,6 +4,9 @@
   background: $gray-100;
   border-radius: $global-border-radius;
   width: 100%;
+  -webkit-box-shadow: 0px 60px 96px -20px rgba(0,0,0,0.30);
+  -moz-box-shadow: 0px 60px 96px -20px rgba(0,0,0,0.30);
+  box-shadow: 0px 60px 96px -20px rgba(0,0,0,0.30);
 }
 
 .strain-list-wrapper {
