--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -1,7 +1,7 @@
 @import '../../styles/global/variables.scss';
 
 #mainnav {
-  position: fixed;
+  position: absolute;
   z-index: 10;
   top: 0;
   width: 100%;
