Added loading state in the StrainsView component to control what is displayed before and after the strain data has been loaded. Adjusted css so strainFilter is sticky on scroll.

--- a/src/components/StrainListItem/StrainListItem.scss
+++ b/src/components/StrainListItem/StrainListItem.scss
@@ -10,7 +10,7 @@
 }
 
 .strain-list__item {
-  border-top: 1px solid $gray-300;
+  border-bottom: 1px solid $gray-300;
   span {
     font-weight: $font-weight-normal;
     font-size: $font-size-base * 0.9;
