--- a/src/components/StrainsView/StrainsView.scss
+++ b/src/components/StrainsView/StrainsView.scss
@@ -13,3 +13,11 @@
   border-right: 1px solid $gray-300;
   border-radius: $global-border-radius;
 }
+
+.strains-filter {
+  position: sticky;
+  top: 0;
+  background: $white;
+  z-index: 15;
+  border-bottom: 1px solid $gray-300;
+}
