Commit before I refactor SearchShelf component to make it a class component.

--- a/src/styles/global/App.scss
+++ b/src/styles/global/App.scss
@@ -10,6 +10,13 @@ body {
   min-height: 100vh;
 }
 
+// .main-body-wrap {
+//   display: flex;
+//   flex-direction: row;
+//   flex-wrap: wrap;
+//   justify-content: center;
+// }
+
 a {
   color: $link-color;
   &:hover {
