--- a/src/components/SearchShelf/SearchShelf.scss
+++ b/src/components/SearchShelf/SearchShelf.scss
@@ -1,10 +1,10 @@
 @import '../../styles/global/variables.scss';
 
 .search-shelf-wrapper {
-  background: $white;
-  min-height: 200px;
+  background: $gray-100;
   position: relative;
   top: 0;
   left: 0;
   z-index: 20;
+  width: 100%;
 }
