--- a/src/styles/global/_variables.scss
+++ b/src/styles/global/_variables.scss
@@ -13,6 +13,7 @@ $gray-800: #343a40;
 $gray-900: #212529;
 $black: #000;
 
+$ultra-light-green: #d5f5cf;
 $light-green: #82d173;
 $medium-green: #63bd52;
 $dark-green: #192c14;
