--- a/src/components/SearchShelf/SearchShelf.scss
+++ b/src/components/SearchShelf/SearchShelf.scss
@@ -1,10 +1,11 @@
 @import '../../styles/global/variables.scss';
 
 .search-shelf-wrapper {
-  background: $gray-100;
-  position: relative;
-  top: 0;
-  left: 0;
-  z-index: 20;
-  width: 100%;
+  background: $medium-green;
+  border-bottom: 1px solid #509c41;
+  // position: relative;
+  // top: -500px;
+  // left: 0;
+  // z-index: 20;
+  width: 100vw;
 }
