Commit before I install react-slidedown for the search shelf.

--- a/src/components/SearchShelf/SearchShelf.scss
+++ b/src/components/SearchShelf/SearchShelf.scss
@@ -1,7 +1,7 @@
 @import '../../styles/global/variables.scss';
 
 .search-shelf-wrapper {
-  background: $medium-green;
+  background: $white;
   border-bottom: 1px solid #509c41;
   // position: relative;
   // top: -500px;
