--- a/src/styles/global/App.scss
+++ b/src/styles/global/App.scss
@@ -79,33 +79,17 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 //  ----------------------------- ANIMATION STYLES
-// .example-enter {
-//   opacity: 0.01;
-// }
-
-// .example-enter.example-enter-active {
-//   opacity: 1;
-//   transition: opacity 500ms ease-in;
-// }
-
-// .example-leave {
-//   opacity: 1;
-// }
-
-// .example-leave.example-leave-active {
-//   opacity: 0.01;
-//   transition: opacity 300ms ease-in;
-// }
 
 .example-appear {
   // opacity: 0.01;
   position: relative;
-  top: -50px;
+  top: 0;
+  height: 0;
   z-index: 20;
 }
 
 .example-appear.example-appear-active {
   // opacity: 1;
-  top: 0;
-  transition: all .4s ease-in;
+  height: 200px;
+  transition: all .1s ease-in;
 }
