Commit before I refactor how the SearchShelf component is being rendered to the DOM.

--- a/src/styles/global/App.scss
+++ b/src/styles/global/App.scss
@@ -80,16 +80,7 @@ h1, h2, h3, h4, h5, h6 {
 
 //  ----------------------------- ANIMATION STYLES
 
-.example-appear {
-  // opacity: 0.01;
-  position: relative;
-  top: 0;
-  height: 0;
-  z-index: 20;
-}
-
-.example-appear.example-appear-active {
-  // opacity: 1;
-  height: 200px;
-  transition: all .1s ease-in;
+// search shelf slide down
+.react-slidedown.search-dropdown-slidedown {
+  transition-duration: .3s;
 }
