--- a/src/components/SearchShelf/SearchShelf.scss
+++ b/src/components/SearchShelf/SearchShelf.scss
@@ -2,10 +2,9 @@
 
 .search-shelf-wrapper {
   background: $white;
-  border-bottom: 1px solid #509c41;
-  // position: relative;
-  // top: -500px;
-  // left: 0;
-  // z-index: 20;
   width: 100vw;
+  min-height: 100px;
+  -webkit-box-shadow: 0px 10px 20px -13px rgba(0,0,0,0.25);
+  -moz-box-shadow: 0px 10px 20px -13px rgba(0,0,0,0.25);
+  box-shadow: 0px 10px 20px -13px rgba(0,0,0,0.25);
 }
