--- a/src/components/SearchShelf/SearchShelf.scss
+++ b/src/components/SearchShelf/SearchShelf.scss
@@ -2,7 +2,7 @@
 
 .search-shelf-wrapper {
   background: $white;
-  width: 100vw;
+  width: 100%;
   min-height: 100px;
   -webkit-box-shadow: 0px 10px 20px -13px rgba(0,0,0,0.25);
   -moz-box-shadow: 0px 10px 20px -13px rgba(0,0,0,0.25);
